add new list validator  method